# Lumora-clean

./: .gitignore  ARCANECODEX_V2_FEATURE_MAPPING.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEPENDENCY_ANALYSIS.md  DESIGN-SPEC.md  DESIGN.md  DEVELOPMENT-PLAN.md  README.md  SE-PLAN.md  SECURITY.md  UI-CONTRACT.md  check-garbage.sh  index.html  lumora-secondary-pages.design  orchestration-summary.json  package-lock.json  package.json  serve.py  tsconfig.json  vite.config.ts  vitest.config.ts  vitest.setup.ts
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v0.2-MILESTONE-AUDIT.md
.understand-anything/: .understandignore  config.json  fingerprints.json  knowledge-graph.json  meta.json
docs/: ARCHITECTURE.md  CLAUDE.md  README.md  ROADMAP.md  SUMMARY.md  全量审计报告.md  审计报告.md  (+1 more)
src-tauri/: Cargo.toml  Lumora.exe.manifest  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: installer-hooks.nsh
src-tauri/sidecar/: clip_server.py  requirements.txt
src-tauri/src/: db.rs  error.rs  import.rs  lan_server.rs  lib.rs  mobile.html  ollama.rs  schema.sql
src-tauri/src/commands/: ai.rs  backup.rs  clip.rs  comfyui.rs  dashboard.rs  embeddings.rs  export.rs  images.rs  mod.rs  settings.rs  tags.rs  trash.rs
src-tauri/src/commands/images/: import.rs  mod.rs  ops.rs  search.rs
src-tauri/src/db/: migrations.rs  mod.rs  schema.rs
src-tauri/src/metadata/: mod.rs  png.rs  sd.rs
src-tauri/src/schema/: types.rs
(+418 files in other folders)
