[package]
name = "Lumora"
version = "0.5.1"
description = "Lumora — AI-powered image gallery by hyls9527"
authors = ["you"]
license = "MIT"
repository = "https://github.com/hyls9527/Lumora-clean"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-store = "2"
tauri-plugin-dialog = "2"
tauri-plugin-updater = "2"
rusqlite = { version = "0.35", features = ["bundled"] }
sqlite-vec = "0.1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "avif", "bmp", "gif", "tiff"] }
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
axum = "0.8"
tokio = { version = "1", features = ["rt-multi-thread", "net"] }
local-ip-address = "0.6"
